--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
 <body>
     Welcome to Glenn's Property Listings Site!
 </body>
+<img src="images/GW.jpg" alt="A description of the image content">
 </html>
