--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title></title>
 </head>
 <body>
-    Welcome to Glenn's Property Listings Site!
+    <h1>Welcome to Glenn's Property Listings Site!</h1>
+
+    <img src="images/GW.jpg" alt="A description of the image content">
 </body>
-<img src="images/GW.jpg" alt="A description of the image content">
 </html>
+
