--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title></title>
 </head>
 <body>
-    <h1>Welcome to Glenn's Property Listings Site!</h1>
+    <h1>Welcome to Glenn's Property Listings Website!</h1>
 
-    <img src="images/GW.jpg" alt="A description of the image content" width="350" height="350">
+    <img src="images/GW.jpg" alt="A description of the image content" width="513" height="550">
 </body>
 </html>
+
 
 
 
